--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@sveltejs/adapter-static": "^3.0.8",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
+    "gh-pages": "^6.3.0",
     "svelte": "^5.35.5",
     "vite": "^7.0.4"
+  },
+  "dependencies": {
+    "canvas-confetti": "^1.9.3"
   }
 }
